edited package to better fit rubric

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,19 +32,16 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(histomaker)
-## basic example code
 
-# EXAMPLES USE RANDOM DATASET (BELOW)
-## create a random dataset that has an ID and value column where values are distributed normally
+# EXAMPLES USE REPRODUCIBLE RANDOM DATASET (BELOW)
+set.seed(333)
 random_data <- data.frame(id = 1:132, values = rnorm(n=132, mean = 23, sd = 7))
 
 # EXAMPLE 1: NO AESTHETICS APPLIED
-## apply the histogram function, employing a bin width of 3 displaying the distribution of values
-ex1 <- histo_function(random_data, values, 3)
+histo_function(random_data, values, 3)
 
 # EXAMPLE 2: AESTHETICS APPLIED
-## corrected histogram column name to get a returned plot showing the distribution of height ranges
-ex2 <- histo_function(random_data, values, 5, fill_colour = "hotpink")
+histo_function(random_data, values, 5, fill_colour = "hotpink")
 ```
 
 
